최댓값 만들기(2)

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -489,6 +489,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(numbers):\n",
+    "    result = -100000001\n",
+    "    for i in range(len(numbers)):\n",
+    "        for j in range(i+1,len(numbers)):\n",
+    "            if numbers[j]*numbers[i] > result:\n",
+    "                result = numbers[j]*numbers[i]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 \n",
+    "def solution(numbers):\n",
+    "    numbers = sorted(numbers)\n",
+    "    return max(numbers[0] * numbers[1], numbers[-1]*numbers[-2]) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
