다항식 더하기

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -523,6 +523,106 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 코드가 좀 더럽지만.. 성공...\n",
+    "def solution(p):\n",
+    "    plist = p.split(' ')\n",
+    "    # 계수만 담을 배열\n",
+    "    x = []\n",
+    "    # 상수항 더할 변수\n",
+    "    it = 0\n",
+    "\n",
+    "    for i in range(0,len(plist),2):\n",
+    "        # 값에 x가 존재한다면\n",
+    "        if 'x' in plist[i]:\n",
+    "            # 길이가 1 이라면 (계수가 1 이라는 것)\n",
+    "            if len(plist[i]) == 1:\n",
+    "                # x를 1로 변환하여 배열에 추가\n",
+    "                x.append(plist[i].replace('x','1'))\n",
+    "            # 아니라면, x를 빈값으로 변경하여 배열에 추가\n",
+    "            else: x.append(plist[i].replace('x',''))\n",
+    "        # 상수항이면 그냥 더하기\n",
+    "        else:\n",
+    "            it += int(plist[i])\n",
+    "    # 담긴 게수값은 문자열이므로 정수형으로 변환하여 더하기       \n",
+    "    xint = sum([int(i) for i in x])\n",
+    "    \n",
+    "    # 계수 값이 0이면\n",
+    "    if xint == 0:\n",
+    "        # 상수항을 제외하여 출력\n",
+    "        return f'{it}'\n",
+    "    \n",
+    "    # 계수 값이 1이면\n",
+    "    elif xint == 1:\n",
+    "        # 상수항이 없다면\n",
+    "        if it == 0:\n",
+    "            # 그냥 x만 출력\n",
+    "            return 'x'\n",
+    "        # 상수항이 존재한다면\n",
+    "        else:\n",
+    "            return f'x + {it}'\n",
+    "    # 상수항이 없다면\n",
+    "    elif it == 0:\n",
+    "        return f'{xint}x'\n",
+    "    # 계수 값이 1이 아니고 상수항도 있다면\n",
+    "    else:\n",
+    "        return f'{xint}x + {it}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 (조금 더 간결)\n",
+    "def solution(polynomial):\n",
+    "    xnum = 0\n",
+    "    const = 0\n",
+    "    for c in polynomial.split(' + '):\n",
+    "        # isdigit을 사용하여 숫자(상수항)만 있는지 판별\n",
+    "        if c.isdigit():\n",
+    "            const+=int(c)\n",
+    "        else:\n",
+    "            # 계수가 있다면\n",
+    "            # 근데 그 계수 값이 1이라면 xnum+1\n",
+    "            # 계수값이 1이 아니라면, c[:-1] (x를 제외한 앞의 숫자)를 더하기\n",
+    "            xnum = xnum+1 if c=='x' else xnum+int(c[:-1])\n",
+    "\n",
+    "    # 계수값이 없다면\n",
+    "    if xnum == 0:\n",
+    "        return str(const)\n",
+    "    # 계수값이 1이라면, 상수항 유무에 따라 다르게 출력\n",
+    "    elif xnum==1:\n",
+    "        # 상수항이 0이 아리나면 상수항도 같이 출력, 0이라면 x만 출력\n",
+    "        return 'x + '+str(const) if const!=0 else 'x'\n",
+    "    # 계수 값이 1이 아니라면, 상수항 유무에 따라 다르게 출력\n",
+    "    else:\n",
+    "        return f'{xnum}x + {const}' if const!=0 else f'{xnum}x'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('x' in '3x')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1447,7 +1547,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.4"
   },
   "orig_nbformat": 4
