숨어있는 숫자의 덧셈(2)

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -637,6 +637,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def solution(my_string):\n",
+    "    li = re.findall(r'[0-9]+', my_string)\n",
+    "    return sum(list(map(int, li)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / 처음에 풀고 싶었던 방식..\n",
+    "def solution(my_string):\n",
+    "    s = ''.join(i if i.isdigit() else ' ' for i in my_string)\n",
+    "    return sum(int(i) for i in s.split())\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
