외계어 사전

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -683,6 +683,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def solution(spell, dic):\n",
+    "    for i in dic:\n",
+    "        temp = 0\n",
+    "        for j in spell:\n",
+    "            if j in i:\n",
+    "                temp += 1\n",
+    "        if temp == len(spell):\n",
+    "            return 1\n",
+    "    return 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드\n",
+    "def solution(spell, dic):\n",
+    "    spell = set(spell)\n",
+    "    for s in dic:\n",
+    "        if not spell-set(s):\n",
+    "            return 1\n",
+    "    return 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
