--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -672,6 +672,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "board[0][] => i-1이 없음  \n",
+    "board[-1][] => i+1이 없음  \n",
+    "board[i][0] => k-1이 없음  \n",
+    "board[i][-1] => k+1이 없음  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "\n",
+    "def solution(board):\n",
+    "    \n",
+    "    bomb = copy.deepcopy(board)\n",
+    "\n",
+    "    # 만약 보드가 1*1이라면 \n",
+    "    if len(board) == 1:\n",
+    "        return 0 if board[0][0] == 1 else 1\n",
+    "    \n",
+    "    for i in range(len(board)):\n",
+    "        for k in range(len(board)):\n",
+    "            if board[i][k] == 1:\n",
+    "                # board[i][0] => k-1이 없음\n",
+    "                if k == 0:\n",
+    "                    # board[0][] => i-1이 없음\n",
+    "                    if i == 0:\n",
+    "                        bomb[i][k:k+2] = [2,2]\n",
+    "                        bomb[i+1][k:k+2] = [2,2]\n",
+    "                    # board[-1][] => i+1이 없음\n",
+    "                    elif i == len(board)-1:\n",
+    "                        bomb[i-1][k:k+2] = [2,2]\n",
+    "                        bomb[i][k:k+2] = [2,2]\n",
+    "                    else:\n",
+    "                        bomb[i-1][k:k+2] = [2,2]\n",
+    "                        bomb[i][k:k+2] = [2,2]\n",
+    "                        bomb[i+1][k:k+2] = [2,2]\n",
+    "                # board[i][-1] => k+1이 없음\n",
+    "                elif k == len(board)-1:\n",
+    "                    if i == 0:\n",
+    "                        bomb[i][k-1:k+1] = [2,2]\n",
+    "                        bomb[i+1][k-1:k+1] = [2,2]\n",
+    "                    elif i == len(board)-1:\n",
+    "                        bomb[i-1][k-1:k+1] = [2,2]\n",
+    "                        bomb[i][k-1:k+1] = [2,2]\n",
+    "                    else:\n",
+    "                        bomb[i-1][k-1:k+1] = [2,2]\n",
+    "                        bomb[i][k-1:k+1] = [2,2]\n",
+    "                        bomb[i+1][k-1:k+1] = [2,2]\n",
+    "                else:\n",
+    "                    if i == 0:\n",
+    "                        bomb[i][k-1:k+2] = [2,2,2]\n",
+    "                        bomb[i+1][k-1:k+2] = [2,2,2]\n",
+    "                    elif i == len(board)-1:\n",
+    "                        bomb[i-1][k-1:k+2] = [2,2,2]\n",
+    "                        bomb[i][k-1:k+2] = [2,2,2]\n",
+    "                    else:\n",
+    "                        bomb[i-1][k-1:k+2] = [2,2,2]\n",
+    "                        bomb[i][k-1:k+2] = [2,2,2]\n",
+    "                        bomb[i+1][k-1:k+2] = [2,2,2]\n",
+    "                        \n",
+    "    # 값이 0인 것의 갯수를 담을 변수\n",
+    "    result = 0\n",
+    "    for i in bomb:\n",
+    "        result += i.count(0)\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / 깔..끔..\n",
+    "def solution(board):\n",
+    "    n = len(board)\n",
+    "    danger = set()\n",
+    "    for i, row in enumerate(board):\n",
+    "        for j, x in enumerate(row):\n",
+    "            if not x:\n",
+    "                continue\n",
+    "            danger.update((i+di, j+dj) for di in [-1,0,1] for dj in [-1, 0, 1])\n",
+    "    return n*n - sum(0 <= i < n and 0 <= j < n for i, j in danger)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 삼각형의 완성조건(2)"
    ]
   },
