--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -769,6 +769,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(sides):\n",
+    "    result = 0\n",
+    "    a,b = map(int,sides)\n",
+    "    for c in range(a+b):\n",
+    "        if max(a,b,c) < sum([a,b,c]) - max(a,b,c):\n",
+    "            result += 1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드\n",
+    "# n이 가장 길지 않은 경우의 조건 max(sides) < min(sides) + n 과 \n",
+    "# n이 가장 긴 조건인 sum(sides) > n 을 둘다 만족하는 n의 개수를 찾으면 아래와 같은 결과\n",
+    "def solution(sides):\n",
+    "    return sum(sides) - max(sides) + min(sides) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드\n",
+    "# 삼각현 세 변의 길이를 i, j, x라 하고 i = 아는 길이 중 작은 길이, j = 아는 길이 중 긴 길이, 모르는 값이 x라 하자. \n",
+    "# if x가 최대라면? x가 가능한 범위는 다음과 같다. i + j > x >= j 따라서 i개의 경우의 수 만큼 가능 \n",
+    "# if j가 최대라면? j >= x > j - i 따라서 i개의 경우의 수가 가능하지만 \n",
+    "# x가 최대일 경우 x == j인 경우의 수가 중복되기 때문에 최종결과에는 -1을 해줘야 한다. \n",
+    "# 따라서 총 가능한 경우의 수 = 입력 받은 가장 작은 수 * 2 -1\n",
+    "def solution(sides):\n",
+    "    return 2 * min(sides) - 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
