저주의 숫자 3

--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -867,6 +867,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    result = 0\n",
+    "    for i in range(n):\n",
+    "        result += 1\n",
+    "        while ('3' in str(result) or result % 3 == 0):\n",
+    "            result += 1\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
