--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -1749,6 +1749,52 @@
    "source": [
     "### Lv.1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 옹알이(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(babbling):\n",
+    "    # print('yeye'.count('ye'))\n",
+    "    # print('yeye'['yeye'.index('ye') + len('ye'):'yeye'.index('ye') + len('ye')+ len('ye')])\n",
+    "    li = []\n",
+    "    for k in babbling:\n",
+    "        for i in [\"aya\", \"ye\", \"woo\", \"ma\"]: \n",
+    "            print(k,'조건 밖1')\n",
+    "            # if (i in k) and k.count(i) > 1:\n",
+    "            #     print(k,'조건1')\n",
+    "            #     while k[k.index(i)+len(i):k.index(i)+len(i)+len(i)] == i:\n",
+    "            #         k = k.replace(i,'',1)\n",
+    "            #     break\n",
+    "            # if (i in k) and k.count(i) > 1 and k[k.index(i)+len(i):k.index(i)+len(i)+len(i)] == i:\n",
+    "            #     break\n",
+    "            if (i in k) and k.count(i) > 1:\n",
+    "                if k[k.index(i)+len(i):k.index(i)+len(i)+len(i)] == i:\n",
+    "                    print('111')\n",
+    "                    break\n",
+    "                for j in range(k.count(i)):\n",
+    "                    print('2222')\n",
+    "                    if k[k.index(i)+len(i):k.index(i)+len(i)+len(i)] == i:\n",
+    "                        print('33333')\n",
+    "                        k = k.replace(i,'s',1)\n",
+    "                        # break\n",
+    "                    else: k = k.replace(i,'0',1)\n",
+    "                # print(k,'조건1')\n",
+    "                # break\n",
+    "            k = k.replace(i,'0')\n",
+    "            print(k,'조건 밖')\n",
+    "        li.append(k)\n",
+    "    return len([i for i in li if i.isdecimal()])"
+   ]
   }
  ],
  "metadata": {
