--- a/CiTy-Study_2023/week6.ipynb
+++ b/CiTy-Study_2023/week6.ipynb
@@ -890,6 +890,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(dots):\n",
+    "#     li = []\n",
+    "#     for i in range(len(dots)):\n",
+    "#         for j in range(i+1,len(dots)):\n",
+    "#             li.append((dots[j][1] - dots[i][1]) / (dots[j][0] - dots[i][0]))\n",
+    "            \n",
+    "#     if len(li) > len(set(li)):\n",
+    "#         return 1\n",
+    "#     else: return 0\n",
+    "    a,b,c,d = sorted(dots)\n",
+    "    if ((b[1]-a[1]) / (b[0]-a[0])) == ((d[1]-c[1]) / (d[0]-c[0])):\n",
+    "        return 1\n",
+    "    elif ((c[1]-a[1]) / (c[0]-a[0])) == ((d[1]-b[1]) / (d[0]-b[0])):\n",
+    "        return 1\n",
+    "    elif ((d[1]-a[1]) / (d[0]-a[0])) == ((c[1]-b[1]) / (c[0]-b[0])):\n",
+    "        return 1\n",
+    "    else: return 0"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -897,10 +922,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(lines):\n",
+    "    a,b,c = lines\n",
+    "    aet = set([i for i in range(a[0]+1,a[1]+1)])\n",
+    "    bet = set([i for i in range(b[0]+1,b[1]+1)])\n",
+    "    cet = set([i for i in range(c[0]+1,c[1]+1)])\n",
+    "    # print(aet,bet,cet)\n",
+    "    # print(aet&bet, aet&cet, bet&cet , aet&bet&cet)\n",
+    "    return len(aet&bet) + len(aet&cet) + len(bet&cet) - 2*len(aet&bet&cet)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 유한소수 판별하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def solution(a, b):\n",
+    "    # 기약분수 만들기 - 두 수의 최대공약수를 구한 후 나누기\n",
+    "    # gcd = math.gcd(a,b)\n",
+    "    # a = a // gcd\n",
+    "    b = b // math.gcd(a,b)\n",
+    "    \n",
+    "    # 분모의 소인수가 2와 5인 것 찾아 리턴\n",
+    "    while b != 1:\n",
+    "        if b % 2 == 0:\n",
+    "            b = b // 2\n",
+    "        elif b % 5 == 0:\n",
+    "            b = b // 5\n",
+    "        else: return 2\n",
+    "    return b\n"
    ]
   },
   {
