세개의 구분자

--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -232,6 +232,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 세개의 구분자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(myStr):\n",
+    "    myStr = myStr.translate(myStr.maketrans({'a':'_', 'b':'_', 'c':'_'}))\n",
+    "    m = myStr.split('_')\n",
+    "    return [i for i in m if i != ''] if len(m) != m.count('') else ['EMPTY']\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day20"
    ]
   },
@@ -282,6 +302,48 @@
    "metadata": {},
    "source": [
     "### 난이도별 문제풀이"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 체육복"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 포켓몬"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 완주하지 못한 선수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 푸드 파이터 대회"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 최댓값과 최솟값"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 영어 끝말잇기"
    ]
   }
  ],
