--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -252,6 +252,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 배열의 원소만큼 추가하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    return [i for i in arr for k in range(i)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day20"
    ]
   },
