--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -269,6 +269,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 빈 배열에 추가, 삭제하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, flag):\n",
+    "    result = []\n",
+    "    for i in range(len(arr)):\n",
+    "        if flag[i] == True:\n",
+    "            count = 0\n",
+    "            while count != arr[i]*2:\n",
+    "                result.append(arr[i])\n",
+    "                count += 1\n",
+    "        else:\n",
+    "            if len(result) != 0:\n",
+    "                 for k in range(arr[i]):\n",
+    "                        result.pop()\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 배열 만들기6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    stk = []\n",
+    "    for i in range(len(arr)):\n",
+    "        if len(stk) == 0:\n",
+    "            stk.append(arr[i])\n",
+    "        else:\n",
+    "            if stk[-1] == arr[i]:\n",
+    "                stk.pop()\n",
+    "            else:\n",
+    "                stk.append(arr[i])\n",
+    "    if len(stk) == 0: return [-1]\n",
+    "    return stk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 무작위로 k개의 수 뽑기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, k):\n",
+    "    result = []\n",
+    "    for i in arr:\n",
+    "        if len(result) == k:\n",
+    "            break\n",
+    "            \n",
+    "        if i not in result:\n",
+    "            result.append(i)\n",
+    "            \n",
+    "    if len(result) != k:\n",
+    "        for j in range(k-len(result)):\n",
+    "            result.append(-1)\n",
+    "            \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day20"
    ]
   },
