--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -360,6 +360,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 배열의 길이를 2의 거듭제곱으로 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    pow2 = [2**i for i in range(0,10+1)]\n",
+    "    \n",
+    "    if len(arr) not in pow2:\n",
+    "        pow2.append(len(arr))\n",
+    "        pow2.sort()\n",
+    "        cnt = pow2[pow2.index(len(arr))+1]\n",
+    "        for i in range(cnt-len(arr)):\n",
+    "            arr.append(0)\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 풀이 / 훨씬 간결..\n",
+    "def solution(arr):\n",
+    "    answer = [2**i for i in range(11)]\n",
+    "    while len(arr) not in answer:\n",
+    "        arr.append(0)\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 배열 비교하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr1, arr2):\n",
+    "    if len(arr1)>len(arr2):\n",
+    "        return 1\n",
+    "    elif len(arr1)<len(arr2):\n",
+    "        return -1\n",
+    "    else:\n",
+    "        if sum(arr1)>sum(arr2):\n",
+    "            return 1\n",
+    "        elif sum(arr1)<sum(arr2):\n",
+    "            return -1\n",
+    "        else: return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 문자열 묶기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(strArr):\n",
+    "    dic = {}\n",
+    "    for i in strArr:\n",
+    "        if len(i) in dic.keys():\n",
+    "            dic[len(i)] += 1\n",
+    "        else: dic[len(i)] = 1\n",
+    "    return max(dic.values())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 배열의 길이에 따라 다른 연산하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, n):\n",
+    "    if len(arr) % 2 == 0:\n",
+    "        for i in range(1,len(arr),2):\n",
+    "            arr[i] = arr[i]+n\n",
+    "    else:\n",
+    "        for i in range(0,len(arr),2):\n",
+    "            arr[i] = arr[i]+n\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 뒤에서 5등까지"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num_list):\n",
+    "    return sorted(num_list)[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day21"
    ]
   },
