특이한 정렬

--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -515,6 +515,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 특이한 정렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(numlist, n):\n",
+    "    dic = {}\n",
+    "    # 딕셔너리에 abs(n-k)를 key 값으로 하고, value에는 해당하는 k 값을 넣는다.\n",
+    "    # 이때, 하나의 Key에 여러개의 value가 존재할 수 있으므로 리스트 형태로 추가한다.\n",
+    "    # 하나의 Key에 여러개의 value를 갖기 위해서는 리스트 형태로 존재해야 한다.\n",
+    "    for k in sorted(numlist):\n",
+    "        # 해당하는 key값이 이미 존재한다면\n",
+    "        if abs(n-k) in dic.keys():\n",
+    "            # 해당 값을 추가\n",
+    "            dic[abs(n-k)].append(k)\n",
+    "          # 해당하는 key가 존재하지 않는다면, 새롭게 만들고 추가\n",
+    "        else: dic[abs(n-k)]=[k]\n",
+    "    # {1:[1], 2:[2,10] ...}\n",
+    "\n",
+    "    # 결과를 담을 리스트\n",
+    "    result = []\n",
+    "    # key값들을 정렬한 상태로 반복 \n",
+    "    for i in sorted(dic.keys()):\n",
+    "        # 만약 해당 key값의 value가 1개 이상이라면\n",
+    "        if len(dic.get(i)) > 1:\n",
+    "            # 해당 값을 뒤에서 부터 result에 추가\n",
+    "            result += dic.get(i)[::-1]\n",
+    "        # 값이 하나라면, 그냥 추가\n",
+    "        else:\n",
+    "            result += dic.get(i)\n",
+    "    # 리스트인데 append가 아닌 += 를 하는 이유는 해당 value값들은 리스트 형태이기 때문에 +를 해주면 '리스트+리스트 = 리스트 하나'가 된다\n",
+    "    # append를 해주면 [[-],[-]] 형태가 된다.\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day24"
    ]
   },
