--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -494,6 +494,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 뒤에서 5등 위로"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num_list):\n",
+    "    return sorted(num_list)[5:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 전국 대회 선발 고사"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(rank, attendance):\n",
+    "    st = [rank[i] for i in range(len(attendance)) if attendance[i] == True]\n",
+    "    return (rank.index(sorted(st)[0])*10000) + (100*rank.index(sorted(st)[1])) + (rank.index(sorted(st)[2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 정수 부분"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(flo):\n",
+    "    return int(flo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 문자열 정수의 합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num_str):\n",
+    "    return sum([int(i) for i in num_str])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 문자열을 정수로 변환하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n_str):\n",
+    "    return int(n_str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day22"
    ]
   },
@@ -552,6 +638,17 @@
     "    # 리스트인데 append가 아닌 += 를 하는 이유는 해당 value값들은 리스트 형태이기 때문에 +를 해주면 '리스트+리스트 = 리스트 하나'가 된다\n",
     "    # append를 해주면 [[-],[-]] 형태가 된다.\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / 훨씬 간단...\n",
+    "def solution(numlist, n):\n",
+    "    return sorted(numlist,key = lambda x: [abs(x-n),-x])"
    ]
   },
   {
