--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -751,6 +751,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 등수 매기기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(score):\n",
+    "    # 평균값 저장\n",
+    "    answer = [sum(i)/2 for i in score]\n",
+    "    # 갯수만큼 1을 담은 리스트 생성\n",
+    "    result = [1 for i in range(len(answer))]\n",
+    "\n",
+    "    for i in range(len(answer)):\n",
+    "        for k in answer:\n",
+    "            # answer[i]의 값이 k보다 작다면\n",
+    "            if answer[i] < k:\n",
+    "                # result[i]에 1 더하기\n",
+    "                result[i] += 1\n",
+    "                \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 \n",
+    "def solution(score):\n",
+    "    a = sorted([sum(i) for i in score], reverse = True)\n",
+    "    return [a.index(sum(i))+1 for i in score]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 옹알이(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(ba):\n",
+    "    bas = [i.replace('aya','0').replace('ye','0').replace('woo','0').replace('ma','0') for i in ba]\n",
+    "    return len([i for i in bas if i.isdigit()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 로그인 성공?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(id_pw, db):\n",
+    "    for i in range(len(db)):\n",
+    "        if id_pw[0] == db[i][0]:\n",
+    "            if id_pw[1] == db[i][1]:\n",
+    "                return 'login'\n",
+    "            else:\n",
+    "                return 'wrong pw'\n",
+    "    return 'fail'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day24"
    ]
   },
