--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -840,6 +840,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 치킨 쿠폰"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(chicken):\n",
+    "    # 서비스 치킨\n",
+    "    service = 0\n",
+    "    # 남은 쿠폰\n",
+    "    cupon = 0\n",
+    "    while chicken != 0:\n",
+    "        service += chicken // 10 \n",
+    "        cupon += chicken % 10\n",
+    "        chicken = chicken // 10\n",
+    "        \n",
+    "    service += cupon//10\n",
+    "    cupon = cupon%10 + cupon//10\n",
+    "    \n",
+    "    return service + (cupon // 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 풀이 / 무한 10%라...서...\n",
+    "def solution(chicken):\n",
+    "    return int(chicken*0.11111111111)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이진수 더하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(bin1, bin2):\n",
+    "    return bin(int(bin1,2) + int(bin2,2))[2:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A로 B만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(before, after):\n",
+    "    return int(sorted(before) == sorted(after))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### k의 개수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(i, j, k):\n",
+    "    result = 0\n",
+    "    for m in range(i,j+1):\n",
+    "        result += str(m).count(str(k))\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Day25"
    ]
   },
