--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -941,6 +941,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 문자열 밀기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(A, B):\n",
+    "    result = 0\n",
+    "    for i in range(len(A)):\n",
+    "        if A == B:\n",
+    "            return result\n",
+    "        else: \n",
+    "            A = A[-1] + A[0:len(A)-1]\n",
+    "            result += 1\n",
+    "            print(result)\n",
+    "        if result == len(A):\n",
+    "            return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / b를 두번 잇게 된거에서 a를 찾으면 된다..\n",
+    "solution=lambda a,b:(b*2).find(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 종이 자르기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(M, N):\n",
+    "    return M*N-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 연속된 수의 합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(num, total):\n",
+    "    if num % 2 == 0:\n",
+    "        return sorted([total//num-i for i in range(1,num//2)] + [total//num] +[total//num+i for i in range(1,num//2+1)])\n",
+    "    else: \n",
+    "        return sorted([total//num-i for i in range(1,num//2+1)] + [total//num] +[total//num+i for i in range(1,num//2+1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드\n",
+    "def solution(num, total):\n",
+    "    return [(total - (num * (num - 1) // 2)) // num + i for i in range(num)]\n",
+    "\n",
+    "# 기본적으로 1부터 num까지 더한 수를 기본형이라 볼때 (num=3 (1,2,3))\n",
+    "# 1부터 3까지 더한수는 6이므로 total = 6을 기본형으로 봅니다 그리고 모든 num을 한칸씩 이동시키면 total이 3씩 증가합니다\n",
+    "# num = 3, total = 6 (1, 2, 3)\n",
+    "# num = 3 total = 9 (2, 3, 4)\n",
+    "# 만약 total이 12고 num이 3이라면 (3, 4, 5)가 되겠죠\n",
+    "# 이걸 위의 식에 대입합니다.\n",
+    "\n",
+    "# (num * (num + 1)) / 2 == num의 기본형 total\n",
+    "# 즉 위의 식을 쓰면 num의 기본형 1 - num까지가 만들어집니다.\n",
+    "# num = 3이면 1,2,3을 더한값이 num = 5면 1,2,3,4,5을 더한값이 나오겠죠\n",
+    "\n",
+    "# 그리고 다음식을 대입해주면\n",
+    "\n",
+    "# (기본형 total - 구해야하는 total) == 기본형에서 몇칸 이동했는지 만약 num = 4 total = 14라면 4의 기본형 total은 10이므로 4가 나옵니다\n",
+    "# 위에서 말했듯 기본형에서 모든 숫자가 1씩 전진하면 num만큼 커진다고 했으니 위의 4라는 숫자는 num 과 동일하고 모든 수를 한칸씩 전진하면 된다는 결과가 나옵니다.\n",
+    "# 이걸 식으로 표현하면\n",
+    "\n",
+    "# ((기본형 total - 구해야하는 total) / 4) + 1 == num의 시작점\n",
+    "\n",
+    "# 아까 값이 4라고 했는데 4 / num을 하면 num = 4이므로 1이 되고 여기서 1이 한칸 전진하라 정도로 이해해서 기본형의 시작점 1과 더해주면\n",
+    "\n",
+    "# 시작점은 2가 됩니다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 다음에 올 숫자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(common):\n",
+    "    # 등차수열\n",
+    "    if common[2]-common[1] == common[1]-common[0]:\n",
+    "        return (common[1]-common[0])+common[-1]\n",
+    "    # 등비수열\n",
+    "    else:\n",
+    "        return common[-1] * (common[1]/common[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 처음에는 등비수열이 if이고 등차수열이 else였는데 자꾸 테케6에서 걸려서 걍 순서를 바꿔줌\n",
+    "def solution(common):\n",
+    "    if common[2]%common[1] == 0 and common[0] and common[-1]:\n",
+    "        return common[-1] * (common[1]/common[0])\n",
+    "    else:\n",
+    "        return (common[1]-common[0])+common[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 난이도별 문제풀이"
    ]
   },
