최댓값과 최솟값

--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -1123,6 +1123,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    answer = s.split(' ')\n",
+    "    result = [int(i) for i in answer]\n",
+    "    return str(min(result)) + \" \" + str(max(result))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
