--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -1095,6 +1095,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n, lost, reserve):\n",
+    "    # n = 전체 학생의 수\n",
+    "    # lost = 도난당한 학생들의 번호가 담긴 배열\n",
+    "    # reserve = 여벌 체육복을 가져온 학생 배열\n",
+    "    # 여벌 체육복을 가져온 학생(reserve)이 도난 당할 수 있음 -> 체육복 못 빌려줌\n",
+    "    # 체육수업을 들을 수 있는 학생의 최댓값을 return \n",
+    "    \n",
+    "    # 여벌 체육복을 가져온 학생이 도난 당 할 경우를 위해, reserve 값이 lost에 있는지 확인\n",
+    "    # reserve가 lost에 있다면 두 배열에서 없애줌\n",
+    "    new_reserve = []\n",
+    "    for i in reserve:\n",
+    "        if i in lost:\n",
+    "            lost.remove(i)\n",
+    "        else:\n",
+    "            new_reserve.append(i)\n",
+    "    reserve = new_reserve\n",
+    "    # 위 코드를 기존에는 그냥 remove만 사용했는데, 이렇게 되면 remove로 삭제되면서 배열이 밀리는 경우가 발생하게 됨. \n",
+    "    # 따라서 새로운 배열에 append를 해주는 방식으로 변경\n",
+    "\n",
+    "    # 앞의 친구가 체육복이 없다면 먼저 빌려주고, 있다면 뒤에 친구에게 빌려줌\n",
+    "    for i in sorted(reserve):\n",
+    "        if i-1 in lost:\n",
+    "            lost.remove(i-1)\n",
+    "            reserve.remove(i)\n",
+    "        elif i+1 in lost:\n",
+    "            lost.remove(i+1)\n",
+    "            reserve.remove(i)\n",
+    "\n",
+    "    return n - len(lost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[remove 사용시 발생하는 문제 해결 설명](https://school.programmers.co.kr/learn/courses/14743/lessons/118024)\n",
+    "\n",
+    "추가로, remove를 사용하면 시간복잡도가 더 높아지므로 set을 통해 중복을 제거하는 것이 더 좋다."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
