영어 끝말잇기

--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -1186,6 +1186,47 @@
    "source": [
     "#### 영어 끝말잇기"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def solution(n, words):\n",
+    "    for i in range(len(words)-1):\n",
+    "        # 끝말잇기를 실패한 경우\n",
+    "        if words[i][-1] != words[i+1][0]:\n",
+    "            print('끝말잇기 실패')\n",
+    "            return [(i+1+1)-((math.ceil((i+1+1)/n)-1)*n),math.ceil((i+1+1)/n)]\n",
+    "        \n",
+    "        # 중복된 단어가 있을 경우\n",
+    "        elif sorted(words)[i] == sorted(words)[i+1]:\n",
+    "            same = sorted(words)[i]\n",
+    "            # 중복 단어가 처음 나타난 곳의 값을 변경\n",
+    "            words[words.index(same)] = \"00000\"\n",
+    "            print(words)\n",
+    "            print(words.index(same))\n",
+    "            return [(words.index(same)+1)-((math.ceil((words.index(same)+1)/n)-1)*n),math.ceil((words.index(same)+1)/n)]\n",
+    "        \n",
+    "    return [0,0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / ....^^..\n",
+    "def solution(n, words):\n",
+    "    for p in range(1, len(words)):\n",
+    "        if words[p][0] != words[p-1][-1] or words[p] in words[:p]: return [(p%n)+1, (p//n)+1]\n",
+    "    else:\n",
+    "        return [0,0]"
+   ]
   }
  ],
  "metadata": {
