--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -1162,6 +1162,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(food):\n",
+    "    answer = ''\n",
+    "    for i in range(1,len(food)):\n",
+    "        answer += str(i) * (food[i]//2)\n",
+    "    return answer + '0' + answer[::-1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
