--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -1144,7 +1144,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 포켓몬"
+    "#### 폰켓몬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(nums):\n",
+    "    # 박사님이 가진 폰켓몬 수의 절반\n",
+    "    give = len(nums)//2\n",
+    "    # 박사님이 가진 폰켓몬 수의 종류\n",
+    "    new = len(set(nums))\n",
+    "    return give if new > give else new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / 더 간단하게\n",
+    "def solution(ls):\n",
+    "    return min(len(ls)/2, len(set(ls)))"
    ]
   },
   {
