완주하지 못한 선수

--- a/CiTy-Study_2023/week7.ipynb
+++ b/CiTy-Study_2023/week7.ipynb
@@ -1176,7 +1176,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 완주하지 못한 선수"
+    "#### 완주하지 못한 선수\n",
+    "\n",
+    "해당 문제는 통과는 쉽지만 효율성 테스트에서 통과하기가 어렵다.   \n",
+    "효율성 테스트에서 통과하려면 해시 알고리즘을 활용하여야 한다.  \n",
+    "[해시 알고리즘](https://kid-do-developer.tistory.com/133)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 효율성 테스트 통과 못함 / 시간 초과\n",
+    "def solution(participant, completion):\n",
+    "    result = []\n",
+    "    for i in participant:\n",
+    "        if i in completion:\n",
+    "            completion.remove(i)\n",
+    "        else:\n",
+    "            result.append(i)\n",
+    "    return ''.join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 효율성 테스트 통과 못함 / 시간 초과\n",
+    "def solution(participant, completion):\n",
+    "    for i in range(len(completion)):\n",
+    "        if sorted(participant)[i] != sorted(completion)[i]:\n",
+    "            return sorted(participant)[i]\n",
+    "    return sorted(participant)[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 효울성 테스트까지 모두 통과한 코드\n",
+    "def solution(participant, completion):\n",
+    "    dic = {}\n",
+    "    \n",
+    "    # 해시 테이블 만들기\n",
+    "    for i in participant:\n",
+    "        dic[i] = 0\n",
+    "    \n",
+    "    # 중복 확인하기  \n",
+    "    for i in participant:\n",
+    "        dic[i] += 1\n",
+    "    \n",
+    "    # 완주자 빼주기\n",
+    "    for c in completion:\n",
+    "        dic[c] -= 1\n",
+    "        \n",
+    "    for k,v in dic.items():\n",
+    "        if v > 0: return k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드 / 신기한 코드...\n",
+    "import collections\n",
+    "\n",
+    "def solution(participant, completion):\n",
+    "    answer = collections.Counter(participant) - collections.Counter(completion)\n",
+    "    return list(answer.keys())[0]"
    ]
   },
   {
