--- a/CiTy-Study_2023/week8.ipynb
+++ b/CiTy-Study_2023/week8.ipynb
@@ -141,10 +141,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(order):\n",
+    "    result = 0\n",
+    "    for i in order:\n",
+    "        if \"cafelatte\" in i:\n",
+    "            result += 5000\n",
+    "        else:\n",
+    "            result += 4500\n",
+    "    return result"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 그림 확대"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(picture, k):\n",
+    "    answer = []\n",
+    "    for i in picture:\n",
+    "        item = ''\n",
+    "        for dot in i:\n",
+    "            item += dot*k\n",
+    "        for re in range(k):\n",
+    "            answer.append(item)\n",
+    "    return answer"
    ]
   },
   {
@@ -155,6 +188,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr, k):\n",
+    "    for i in range(len(arr)):\n",
+    "        if k % 2 == 0:\n",
+    "            arr[i] += k\n",
+    "        else:\n",
+    "            arr[i] *= k\n",
+    "    return arr"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,10 +210,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(myString):\n",
+    "    for i in myString:\n",
+    "        if ord(i) < ord(\"l\"):\n",
+    "            myString = myString.replace(i,\"l\")\n",
+    "    return myString"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 특별한 이차원 배열"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n):\n",
+    "    return [[1 if i == j else 0 for j in range(n)] for i in range(n)]"
    ]
   },
   {
