--- a/CiTy-Study_2023/week8.ipynb
+++ b/CiTy-Study_2023/week8.ipynb
@@ -261,6 +261,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "        for j in range(len(arr)):\n",
+    "            if arr[i][j] != arr[j][i]:\n",
+    "                return 0\n",
+    "    return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 코드\n",
+    "def solution(arr):\n",
+    "    return int(arr == list(map(list, zip(*arr))))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,10 +293,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arr):\n",
+    "    row = len(arr)\n",
+    "    col = len(arr[0])\n",
+    "    print(row,col)\n",
+    "    if row > col:\n",
+    "        for i in range(row):\n",
+    "            for k in range(row-col):\n",
+    "                arr[i].append(0)\n",
+    "    elif row < col:\n",
+    "        for i in range(col-row):\n",
+    "            arr.append([0]*col)\n",
+    "    return arr"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 이차원 배열 대각선 순회하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(board, k):\n",
+    "    result = 0\n",
+    "    for i in range(len(board)):\n",
+    "        for j in range(len(board[0])):\n",
+    "            if i + j <= k:\n",
+    "                result += board[i][j]\n",
+    "    return result"
    ]
   }
  ],
