--- a/CiTy-Study_2023/week8.ipynb
+++ b/CiTy-Study_2023/week8.ipynb
@@ -333,6 +333,154 @@
     "                result += board[i][j]\n",
     "    return result"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 코딩테스트 - Level"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 성격 유형 검사하기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 신규 아이디 추천"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 카펫"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(brown, yellow):\n",
+    "    ca = brown + yellow \n",
+    "    ca_x = []\n",
+    "    for i in range(1,ca+1):\n",
+    "        # 약수 찾기로 문제 풀이\n",
+    "        if ca % i == 0:\n",
+    "            if (i-2)*(ca//i -2) == yellow:\n",
+    "                return [ca//i,i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 구명보트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 채점 결과\n",
+    "# 정확성: 14.8\n",
+    "# 효율성: 7.4\n",
+    "# 합계: 22.2 / 100.0\n",
+    "def solution(people, limit):\n",
+    "    people.sort()\n",
+    "    result = 0\n",
+    "    s = limit\n",
+    "    for i in people[::-1]:\n",
+    "        if s - i == 0:\n",
+    "            s = limit\n",
+    "            result += 1\n",
+    "        elif s - i < 40:\n",
+    "            result += 1\n",
+    "        elif s - i > 40:\n",
+    "            s = s-i\n",
+    "    if s != limit: result+=1\n",
+    "    return result \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 풀이\n",
+    "def solution(people, limit):\n",
+    "    answer = 0\n",
+    "    people.sort()\n",
+    "    a = 0\n",
+    "    b = len(people) - 1\n",
+    "    while a < b :\n",
+    "        if people[b] + people[a] <= limit :\n",
+    "            a += 1\n",
+    "            answer += 1\n",
+    "        b -= 1\n",
+    "    return len(people) - a\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 귤 고르기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 속도는 빠른데 런타임 에러 발생\n",
+    "def solution(k, tangerine):\n",
+    "    size = [0 for i in set(tangerine)]\n",
+    "\n",
+    "    for i in tangerine:\n",
+    "        size[i-1] += 1\n",
+    "    \n",
+    "    result = 0\n",
+    "    for i in sorted(size)[::-1]:\n",
+    "        k -= i\n",
+    "        result += 1\n",
+    "        if k <= 0:\n",
+    "            return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 시간 초과 발생\n",
+    "def solution(k, tangerine):\n",
+    "    size = []\n",
+    "\n",
+    "    for i in set(tangerine):\n",
+    "        size.append(tangerine.count(i))\n",
+    "    \n",
+    "    result = 0\n",
+    "    for i in sorted(size)[::-1]:\n",
+    "        k -= i\n",
+    "        result += 1\n",
+    "        if k <= 0:\n",
+    "            return result"
+   ]
   }
  ],
  "metadata": {
