--- a/CiTy-Study_2023/week8.ipynb
+++ b/CiTy-Study_2023/week8.ipynb
@@ -446,6 +446,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 모두 통과!!!\n",
+    "def solution(k, tangerine):\n",
+    "    size = [0 for i in range(max(set(tangerine)))]\n",
+    "\n",
+    "    for i in tangerine:\n",
+    "        size[i-1] += 1\n",
+    "    \n",
+    "    result = 0\n",
+    "    for i in sorted(size)[::-1]:\n",
+    "        k -= i\n",
+    "        result += 1\n",
+    "        if k <= 0:\n",
+    "            return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 속도는 빠른데 런타임 에러 발생\n",
     "def solution(k, tangerine):\n",
     "    size = [0 for i in set(tangerine)]\n",
