N개의 최소공배수 풀이

--- a/CiTy-Study_2023/week9.ipynb
+++ b/CiTy-Study_2023/week9.ipynb
@@ -17,6 +17,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 최소공배수 구하기 = 두 값을 곱한 것에서 최대공약수 빼주기\n",
+    "import math\n",
+    "def solution(arr):\n",
+    "    result = 1\n",
+    "    for i in arr:\n",
+    "        result = result * i // math.gcd(result, i)\n",
+    "    return result"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,6 +67,22 @@
     "            return i-1\n",
     "        elif i == len(citations):\n",
     "            return len(citations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 사람 풀이\n",
+    "def solution(citations):\n",
+    "    citations = sorted(citations)\n",
+    "    l = len(citations)\n",
+    "    for i in range(l):\n",
+    "        if citations[i] >= l-i:\n",
+    "            return l-i\n",
+    "    return 0"
    ]
   },
   {
