--- a/CiTy-Study_2023/week9.ipynb
+++ b/CiTy-Study_2023/week9.ipynb
@@ -46,6 +46,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if n == 1 or 2: reutrn n 할때는 계속 런타임에러 떴는데, 해당 코드로 하니까 안 뜨고 통과됨\n",
+    "def solution(n):\n",
+    "    if n < 3:\n",
+    "        return n\n",
+    "    dp = [0] * (n+1)\n",
+    "    dp[1] = 1\n",
+    "    dp[2] = 2\n",
+    "    for i in range(3,n+1):\n",
+    "        dp[i] = dp[i-1] + dp[i-2]\n",
+    "    return dp[n] % 1234567"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 테케 1 자꾸 런타임 에러 발생\n",
+    "def solution(n):\n",
+    "    dp = [0] * (n+1)\n",
+    "    dp[1] = 1\n",
+    "    dp[2] = 2\n",
+    "    for i in range(3,n+1):\n",
+    "        dp[i] = dp[i-1] + dp[i-2]\n",
+    "    if n == 1:\n",
+    "        return 1 % 1234567\n",
+    "    return dp[n] % 123456"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 조합으로 풀어보려고 했는데 안되겠음...\n",
+    "from itertools import combinations\n",
+    "def solution(n):\n",
+    "    # 방법의 수\n",
+    "    result = 0\n",
+    "    li = [1 for i in range(n)] + [2 for i in range(n)]\n",
+    "    \n",
+    "    for i in range(n//2,n+1):\n",
+    "        print(set(list(combinations(li, i))))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
