괄호 회전하기

--- a/CiTy-Study_2023/week9.ipynb
+++ b/CiTy-Study_2023/week9.ipynb
@@ -39,6 +39,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    result = 0\n",
+    "    for i in range(len(s)):\n",
+    "        new_s = s[i:]+ s[:i]\n",
+    "        while True:\n",
+    "            s_len = len(new_s)\n",
+    "            new_s = new_s.replace('()','')\n",
+    "            new_s = new_s.replace('{}','')\n",
+    "            new_s = new_s.replace('[]','')\n",
+    "            if len(new_s) == 0:\n",
+    "                result += 1\n",
+    "                break\n",
+    "            elif s_len == len(new_s):\n",
+    "                break\n",
+    "    return result"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
