--- a/CiTy-Study_2023/week9.ipynb
+++ b/CiTy-Study_2023/week9.ipynb
@@ -184,6 +184,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    "def solution(word):\n",
+    "    li = []\n",
+    "    # 모든 사전의 내용들을 담아서 만들기\n",
+    "    for i in range(1,5+1):\n",
+    "        for k in product(['A','E','I','O','U'],repeat=i):\n",
+    "            li.append(''.join(k))\n",
+    "    # 정렬을 해줘야 a,aa,aaa 순으로 정렬됨. 정렬하지 않으면 a,e,i...순서\n",
+    "    return sorted(li).index(word)+1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
