뒤에 있는 큰 수 찾기

--- a/CiTy-Study_2023/week9.ipynb
+++ b/CiTy-Study_2023/week9.ipynb
@@ -213,6 +213,52 @@
    "source": [
     "### 뒤에 있는 큰 수 찾기"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stack을 이용해야 시간초과가 발생하지 않음\n",
+    "# 해당 코드는 다른 분의 풀이를 작성한 것\n",
+    "def solution(numbers):\n",
+    "    # numbers의 갯수만큼 -1을 담은 배열 생성\n",
+    "    result = [-1] * len(numbers)\n",
+    "    # numbers의 인덱스 번호를 담을 배열\n",
+    "    stack = []\n",
+    "    for i, num in enumerate(numbers) :\n",
+    "        # num이 numbers[stack의 마지막 값(인덱스번호)] 값보다 크고 stack이 빈 배열이 아닐때 while문 실행\n",
+    "        while stack and numbers[stack[-1]] < num:\n",
+    "            # result[stack의 마지막 값(인덱스 번호)]의 값을 num으로 변경\n",
+    "            result[stack.pop()] = num\n",
+    "        # 반복문을 실행하지 않을 때에는 stack에 인덱스 번호를 담아줌\n",
+    "        stack.append(i)\n",
+    "        \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 시간 초과가 발생한 코드\n",
+    "def solution(numbers):\n",
+    "    result = []\n",
+    "    for i in range(len(numbers)):\n",
+    "        back = numbers[i+1:]\n",
+    "        for k in range(len(back)):\n",
+    "            if numbers[i] < back[k]:\n",
+    "                    result.append(back[k])\n",
+    "                    break\n",
+    "            if k == len(back)-1:\n",
+    "                result.append(-1)\n",
+    "        if i == len(numbers)-1:\n",
+    "            result.append(-1)\n",
+    "    return result"
+   ]
   }
  ],
  "metadata": {
