--- a/CiTy-Study_2023/week9.ipynb
+++ b/CiTy-Study_2023/week9.ipynb
@@ -204,7 +204,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 땅따먹기"
+    "### 땅따먹기\n",
+    "\n",
+    "[참고글](https://shanepark.tistory.com/183)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DP를 사용하여 문제 풀이 (다른 분의 코드 참고)\n",
+    "# 각 행을 내려가면서 최고의 합을 저장하며 내려감\n",
+    "# 그렇게 되면 마지막 행에 가장 합이 높은 값이 저장됨\n",
+    "# 마지막 행에서 max 최대값만 찾아주면 됨\n",
+    "def solution(land):\n",
+    "    for i in range(1,len(land)):\n",
+    "        land[i][0] += max(land[i-1][1], land[i-1][2], land[i-1][3]);\n",
+    "        land[i][1] += max(land[i-1][0], land[i-1][2], land[i-1][3]);\n",
+    "        land[i][2] += max(land[i-1][1], land[i-1][3], land[i-1][0]);\n",
+    "        land[i][3] += max(land[i-1][1], land[i-1][2], land[i-1][0]);\n",
+    "    return max(land[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 코드실행 테케는 성공했으나 제출하기 테케는 모두 실패\n",
+    "# 중복값 처리가 필요할 듯\n",
+    "def solution(land):\n",
+    "    result = 0\n",
+    "    li = []\n",
+    "    for j in land:\n",
+    "        if len(li) == 0:\n",
+    "            result += max(j)\n",
+    "            li.append(j.index(max(j)))\n",
+    "        else:\n",
+    "            if j.index(max(j)) != li[-1]:\n",
+    "                j.remove(max(j))\n",
+    "            result += max(j)\n",
+    "            li.append(j.index(max(j)))\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(land):\n",
+    "\n",
+    "    for i in range(1, len(land)):\n",
+    "        for j in range(len(land[0])):\n",
+    "            land[i][j] = max(land[i -1][: j] + land[i - 1][j + 1:]) + land[i][j]\n",
+    "\n",
+    "    return max(land[-1])"
    ]
   },
   {
