week10 정리 + 같은 숫자는 싫어

--- a/CiTy-Study_2023/week9.ipynb
+++ b/CiTy-Study_2023/week9.ipynb
@@ -245,7 +245,7 @@
     "            result += max(j)\n",
     "            li.append(j.index(max(j)))\n",
     "        else:\n",
-    "            if j.index(max(j)) != li[-1]:\n",
+    "            if j.index(max(j)) == li[-1]:\n",
     "                j.remove(max(j))\n",
     "            result += max(j)\n",
     "            li.append(j.index(max(j)))\n",
