--- a/CiTy-Study_2023/week10.ipynb
+++ b/CiTy-Study_2023/week10.ipynb
@@ -88,6 +88,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "import math\n",
+    "def solution(progresses, speeds):\n",
+    "    result = []\n",
+    "    queue = deque()\n",
+    "    for i in range(len(speeds)):\n",
+    "        queue.append(math.ceil((100-progresses[i]) / speeds[i]))\n",
+    "        \n",
+    "    pop = queue.popleft()\n",
+    "    cnt = 1\n",
+    "    while queue:\n",
+    "        if pop < queue[0]:\n",
+    "            pop = queue.popleft()\n",
+    "            result.append(cnt)\n",
+    "            cnt = 1\n",
+    "        else:\n",
+    "            queue.popleft()\n",
+    "            cnt += 1\n",
+    "    \n",
+    "    result.append(cnt)\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
