올바른 괄호

--- a/CiTy-Study_2023/week10.ipynb
+++ b/CiTy-Study_2023/week10.ipynb
@@ -125,6 +125,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "def solution(s):\n",
+    "    que = deque(s)\n",
+    "    cntr = 0 #'('\n",
+    "    cntl = 0 #')'\n",
+    "    while que: \n",
+    "        pop = que.popleft()\n",
+    "        if cntl > cntr:\n",
+    "            return False \n",
+    "        if pop == '(':\n",
+    "            cntr += 1\n",
+    "        if pop == ')':\n",
+    "            cntl += 1   \n",
+    "    if cntr != cntl:\n",
+    "        return False\n",
+    "    return True"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
